<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="horizontal"
     >

   <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 

       android:layout_marginLeft="10dp"
       android:layout_marginRight="10dp"
       android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txtTittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_setting_old_ip" />

        <EditText
            android:id="@+id/IP_Old"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10" />

        <TextView
            android:id="@+id/txtTenReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_setting_new_ip" />

        <EditText
            android:id="@+id/IPNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bt_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/btn_save" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2" >
            </RelativeLayout>

            <Button
                android:id="@+id/bt_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/button_cancel" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>